[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xbox_monitor"
version = "1.6.1"
description = "Tool implementing real-time tracking of Xbox Live players activities"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]
authors = [{ name = "Michal Szymanski", email = "misiektoja-pypi@rm-rf.ninja" }]
requires-python = ">=3.8"
dependencies = [
  "xbox-webapi>=2.1.0",
  "requests>=2.0",
  "python-dateutil>=2.8",
  "httpx>=0.26.0",
  "pytz>=2020.1",
  "tzlocal>=4.0",
  "python-dotenv>=0.19",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS :: MacOS X",
]
keywords = ["xbox", "xbox-live","monitoring", "tracking", "real-time", "osint", "xbox-webapi"]

[project.urls]
Homepage = "https://github.com/misiektoja/xbox_monitor"
Source   = "https://github.com/misiektoja/xbox_monitor"
Changelog= "https://github.com/misiektoja/xbox_monitor/blob/main/RELEASE_NOTES.md"

[project.scripts]
xbox_monitor = "xbox_monitor:main"

[tool.setuptools]
py-modules = ["xbox_monitor"]
include-package-data = true
